--- a/08_vue/frontvue3/package.json
+++ b/08_vue/frontvue3/package.json
@@ -13,8 +13,10 @@
     "bootstrap-vue-3": "^0.1.11",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-cropperjs": "^5.0.0",
     "vue-router": "^4.0.3",
     "vue-select": "^4.0.0-beta.3",
+    "vue-toast-notification": "^3.0",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
