--- a/08_vue/frontvue3/package.json
+++ b/08_vue/frontvue3/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.5",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "bootstrap-vue-3": "^0.1.11",
     "core-js": "^3.22.4",
@@ -34,5 +35,4 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3"
   }
-
 }
