--- a/03_express/package.json
+++ b/03_express/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -18,7 +19,9 @@
     "mongoose": "^6.2.10",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
+    "node-fetch": "2",
     "request-image-size": "^2.2.0",
+    "uuid": "^8.3.2",
     "webp-converter": "^2.3.3"
   }
 }
