--- a/03_express/package.json
+++ b/03_express/package.json
@@ -6,6 +6,8 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
+    "@azure/storage-blob": "^12.10.0",
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "cookie-parser": "~1.4.4",
